tests/baselines/reference/instanceofWithStructurallyIdenticalTypes.errors.txt
instanceofWithStructurallyIdenticalTypes.ts(3,12): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
instanceofWithStructurallyIdenticalTypes.ts(4,12): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
instanceofWithStructurallyIdenticalTypes.ts(5,12): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
instanceofWithStructurallyIdenticalTypes.ts(32,18): error TS2339: Property 'item' does not exist on type 'never'.
instanceofWithStructurallyIdenticalTypes.ts(39,11): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
instanceofWithStructurallyIdenticalTypes.ts(41,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
instanceofWithStructurallyIdenticalTypes.ts(42,21): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.


==== instanceofWithStructurallyIdenticalTypes.ts (7 errors) ====
    // Repro from #7271
    
    class C1 { item: string }
               ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
    class C2 { item: string[] }
               ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
    class C3 { item: string }
               ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
    
    function foo1(x: C1 | C2 | C3): string {
        if (x instanceof C1) {
            return x.item;
        }
        else if (x instanceof C2) {
            return x.item[0];
        }
        else if (x instanceof C3) {
            return x.item;
        }
        return "error";
    }
    
    function isC1(c: C1 | C2 | C3): c is C1 { return c instanceof C1 }
    function isC2(c: C1 | C2 | C3): c is C2 { return c instanceof C2 }
    function isC3(c: C1 | C2 | C3): c is C3 { return c instanceof C3 }
    
    function foo2(x: C1 | C2 | C3): string {
        if (isC1(x)) {
            return x.item;
        }
        else if (isC2(x)) {
            return x.item[0];
        }
        else if (isC3(x)) {
            return x.item;
                     ~~~~
!!! error TS2339: Property 'item' does not exist on type 'never'.
        }
        return "error";
    }
    
    // More tests
    
    class A { a: string }
              ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    class A1 extends A { }
    class A2 { a: string }
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    class B extends A { b: string }
                        ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
    
    function goo(x: A) {
        if (x instanceof A) {
            x;  // A
        }
        else {
            x;  // never
        }
        if (x instanceof A1) {
            x;  // A1
        }
        else {
            x;  // A
        }
        if (x instanceof A2) {
            x;  // A2
        }
        else {
            x;  // A
        }
        if (x instanceof B) {
            x;  // B
        }
        else {
            x;  // A
        }
    }
    